mattermost: copy email notif templates verbatim, no jinja

--- a/mattermost.yml
+++ b/mattermost.yml
@@ -98,16 +98,16 @@ z# INSTALLATION
 
     # Redact sender and message content from notifications
     - name: "mattermost: post_body"
-      template: >
-        src="templates/mattermost/post_body.html.j2"
+      copy: >
+        src="templates/mattermost/post_body.html"
         dest={{ mm_root }}/templates/post_body.html
         mode=0644
       notify: restart mattermost
     
     # Redact sender and message content from notifications
     - name: "mattermost: post_batched_post"
-      template: >
-        src="templates/mattermost/post_batched_post.html.j2"
+      copy: >
+        src="templates/mattermost/post_batched_post.html"
         dest={{ mm_root }}/templates/post_batched_post.html
         mode=0644
       notify: restart mattermost
