--- a/redmine.yml
+++ b/redmine.yml
@@ -22,6 +22,7 @@
   vars:
     redmine_conf_dir: /etc/redmine/default
     redmine_logs_dir: /var/log/redmine/default
+    mariadb_backups_dir: /var/backups/mariadb
     unicorn_port: 9000
     unicorn_workers: 4
     unicorn_pid: /var/run/unicorn.pid
@@ -85,6 +86,14 @@
 
     # mariadb ------------------
 
+    - name: "mariadb: backups dir"
+      file: >
+        path={{ mariadb_backups_dir }}
+        state=directory
+        owner=backup
+        group=backup
+        mode=0750
+    
     # TODO mariadb backup script
     # TODO mariadb backup cron
 
