--- a/mattermost.yml
+++ b/mattermost.yml
@@ -212,7 +212,7 @@
     - name: logrotate-nginx
       template: >
         src=templates/mattermost/logrotate-nginx.j2
-        dest=/etc/logrotate.d/nginx
+        dest=/etc/logrotate.d/nginx-mattermost
 
   handlers:
 
